-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Alpha
-
None
-
windows 10 x64, msvc 2017
-
70e772079f4943822cc469ef83fb9c43afc36514
Since `-utf-8` option was added for msvc in commit
015b53e9b4091c28b8a2d7931788 "Turn on -utf-8 compiler option for msvc2015 update 2 and up"
The problem is that `-utf-8` option is parsed as '\u' by qmake which happens to be `UndefineAllPreprocessorDefinitions` which leads to undefining of all important defintions such as `_MSC_VER` or `_WIN64` and every program fails to compile. Also I think `-utf-8` should also appear in `AdditionalOptions`.
For Gerrit Dashboard: QTBUG-59431 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
188239,2 | Fix parsing of the /utf8 MSVC compiler flag in VS project generator | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |
195331,4 | Fix parsing of MSVC's /utf-8 option, take 2 | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |